News
====

.. contents::

svn trunk
---------

* Fixed ``paste.auth.open_id`` failures not returning a correct
  response.

* Changed ``paste.httpexceptions.HTTPUnauthorized`` so that the
  ``WWW-Authenticate`` header is not required.  401 responses don't
  *have* to have that header.

* In ``paste.fixture.TestApp``: ``<form>`` tags that have to
  ``action`` will preserve the existing query string.  (Generally
  relative links that are completely empty should but were not
  preserving the query string)

* Made ``paste.*`` compatible with `py2exe <http://www.py2exe.org/>`_
  by adding a ``modulefinder`` call in ``__init__.py``

* The ``paste.gzipper`` gzipping middleware wasn't changing the
  Content-Length header properly; thanks to Brad Clements for the fix.

* Fixed ``paste.proxy`` to not use anything based on the dict form of
  ``httplib..HTTPMessage``.  This form folds headers together in a way
  that breaks ``Set-Cookie`` headers (two ``Set-Cookie`` headers would
  be merged into one).

* ``paste.request.parse_formvars`` didn't accept parameters in
  ``CONTENT_TYPE``.  ``prototype.js`` sets a ``charset`` parameter,
  which caused a problem.

* Added a ``__traceback_decorator__`` magic local variable, to allow
  arbitrary manipulation of the output of
  ``paste.exceptions.collector`` before formatting.

1.0
---

* Fixed ``parsed_formvars`` potentially locking up on wsgi.input
  after modification of ``QUERY_STRING``.

* Fixed problem where ``paste.exceptions.errormiddleware`` didn't
  expose the ``.close()`` method of the app_iter that it wraps (to
  catch exceptions).  This is a problem if the server about the
  errormiddleware aborts the request; it should then call
  ``.close()``, but won't necessarily exhaust the iterator to do so.

* Added entry point for ``paste.translogger``
  (``egg:Paste#translogger``)

* Fixed some cases where long data (e.g., a file upload) would show up
  in the error report, creating a very very large report.  Also, put